--- a/angular.json
+++ b/angular.json
@@ -24,13 +24,17 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/primeicons/primeicons.css",              
+              "src/styles.css",
+              "./node_modules/primeicons/primeicons.css",     
+              "./node_modules/primeflex/primeflex.css" ,         
               "./node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "./node_modules/primeng/resources/primeng.min.css",
-              "./node_modules/primeflex/primeflex.css",
-              "src/styles.css"
+              "./node_modules/primeng/resources/primeng.min.css" ,              
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"           
+              
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
@@ -92,11 +96,11 @@
               "src/assets"
             ],
             "styles": [
+               "src/styles.css",
                 "./node_modules/primeicons/primeicons.css",              
                 "./node_modules/primeng/resources/themes/saga-blue/theme.css",
-                "./node_modules/primeng/resources/primeng.min.css",
-                "./node_modules/primeflex/primeflex.css",
-                "src/styles.css"
+                "./node_modules/primeng/resources/primeng.min.css"
+               
             ],
             "scripts": []
           }
